// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Quick View Dialog 1`] = `
<section
  class="fd-dialog-docs-static fd-dialog fd-dialog--active"
>
  
    
  <div
    aria-labelledby="dialog-title-1"
    aria-modal="true"
    class="fd-dialog__content"
    role="dialog"
  >
    
        
    <span
      class="fd-dialog__resize-handle"
    />
    
        
    <header
      class="fd-dialog__header fd-bar fd-bar--header"
    >
      
            
      <div
        class="fd-bar__middle"
      >
        
                
        <div
          class="fd-bar__element"
        >
          Company B
        </div>
        
            
      </div>
      
        
    </header>
    

        
    <div
      class="fd-dialog__body"
    >
      
            
      <div
        class="fd-quick-view"
      >
        
                
        <div
          class="fd-quick-view__content"
        >
          
                    
          <div
            class="fd-quick-view__subheader"
          >
            
                        
            <span
              class="fd-avatar fd-avatar--s"
              role="presentation"
            >
              
                            
              <i
                class="fd-avatar__icon sap-icon--camera"
                role="presentation"
              />
              
                        
            </span>
            
                        
                        
            <div
              class="fd-quick-view__text"
            >
              
                            
              <div
                class="fd-quick-view__title"
              >
                
                                
                <h5
                  class="fd-title fd-title--h5"
                >
                  
                                    
                  <a
                    class="fd-link"
                    href="#"
                  >
                    Inventarisation
                  </a>
                  
                                
                </h5>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group"
          >
                                
                        
            <div
              class="fd-quick-view__group-item"
            >
              
                            
              <div
                class="fd-quick-view__group-item-label"
              >
                
                                Start Date:
                            
              </div>
              
                            
              <div
                class="fd-quick-view__group-item-content"
              >
                
                                01/01/2015
                            
              </div>
              
                        
            </div>
            
                        
                        
            <div
              class="fd-quick-view__group-item"
            >
              
                            
              <div
                class="fd-quick-view__group-item-label"
              >
                
                                End Date:
                            
              </div>
              
                            
              <div
                class="fd-quick-view__group-item-content"
              >
                
                                31/12/2015
                            
              </div>
              
                        
            </div>
            
                        
                        
            <div
              class="fd-quick-view__group-item"
            >
              
                            
              <div
                class="fd-quick-view__group-item-label"
              >
                
                                Occurrence:
                            
              </div>
              
                            
              <div
                class="fd-quick-view__group-item-content"
              >
                
                                Weekly
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <footer
      class="fd-dialog__footer fd-bar fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-dialog__decisive-button fd-button fd-button--emphasized fd-button--compact"
          >
            
                        Send reminder
                    
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-dialog__decisive-button fd-button fd-button--compact"
          >
            
                        Cancel
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </footer>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Components/Quick View Popover 1`] = `
<div
  class="fd-popover"
>
  
    
  <div
    aria-hidden="false"
    class="fd-popover__body"
    id="popoverA1"
  >
    
        
    <div
      class="fd-quick-view"
    >
      
            
      <div
        class="fd-quick-view__header"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              Company
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      

            
      <div
        class="fd-quick-view__content"
      >
        
                
        <div
          class="fd-quick-view__subheader"
        >
          
                    
          <span
            class="fd-avatar fd-avatar--s"
            role="presentation"
          >
            
                        
            <i
              class="fd-avatar__icon sap-icon--building"
              role="presentation"
            />
            
                    
          </span>
          
                    
                    
          <div
            class="fd-quick-view__text"
          >
            
                        
            <div
              class="fd-quick-view__title"
            >
              
                            
              <h5
                class="fd-title fd-title--h5"
              >
                Company B
              </h5>
              
                        
            </div>
            
                        
                        
            <div
              class="fd-quick-view__subtitle"
            >
              
                            
              <div
                class="fd-quick-view__subtitle"
              >
                Michael Adams
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
                
                
        <div
          class="fd-quick-view__group"
        >
          
                    
          <div
            class="fd-quick-view__group-title"
          >
            
                        
            <h5
              class="fd-title fd-title--h5"
            >
              Contact Details
            </h5>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Phone
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            
              <a
                class="fd-link"
                href="tel:+1 605 555 5555"
              >
                +1 605 555 5555
              </a>
              
                        
            </div>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Address
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            781 Main Street 
              <br />
              
                            Anytown, SD 57401, USA
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
                
                
        <div
          class="fd-quick-view__group"
        >
          
                    
          <div
            class="fd-quick-view__group__title"
          >
            
                        
            <h5
              class="fd-title fd-title--h5"
            >
              Main Contact
            </h5>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Name
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            Michael Adams
                        
            </div>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Mobile
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            
              <a
                class="fd-link"
                href="tel:+1 605 555 5555"
              >
                +1 605 555 5555
              </a>
              
                        
            </div>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Phone
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            
              <a
                class="fd-link"
                href="tel:+1 316 555 5555"
              >
                +1 316 555 5555
              </a>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Quick View Without the header 1`] = `
<div
  class="fd-popover"
>
  
    
  <div
    aria-hidden="false"
    class="fd-popover__body"
    id="popoverA1"
  >
    
        
    <div
      class="fd-quick-view"
    >
      
            
      <div
        class="fd-quick-view__content"
      >
        
                
        <div
          class="fd-quick-view__subheader"
        >
          
                    
          <span
            class="fd-avatar fd-avatar--s"
            role="presentation"
          >
            
                        
            <i
              class="fd-avatar__icon sap-icon--camera"
              role="presentation"
            />
            
                    
          </span>
          
                    
                    
          <div
            class="fd-quick-view__text"
          >
            
                        
            <div
              class="fd-quick-view__title"
            >
              
                            
              <h5
                class="fd-title fd-title--h5"
              >
                
                                
                <a
                  class="fd-link"
                  href="#"
                >
                  Inventarisation
                </a>
                
                            
              </h5>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
                
                
        <div
          class="fd-quick-view__group"
        >
                              
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Start Date:
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            01/01/2015
                        
            </div>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            End Date:
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            31/12/2015
                        
            </div>
            
                    
          </div>
          
                    
                    
          <div
            class="fd-quick-view__group-item"
          >
            
                        
            <div
              class="fd-quick-view__group-item-label"
            >
              
                            Occurrence:
                        
            </div>
            
                        
            <div
              class="fd-quick-view__group-item-content"
            >
              
                            Weekly
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
